--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
     },
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "2.1.2",
-        "@angular/compiler": "2.1.2",
-        "@angular/core": "2.1.2",
-        "@angular/forms": "2.1.2",
-        "@angular/http": "2.1.2",
-        "@angular/platform-browser": "2.1.2",
-        "@angular/platform-browser-dynamic": "2.1.2",
-        "@angular/router": "3.1.2",
+        "@angular/common": "2.2.0",
+        "@angular/compiler": "2.2.0",
+        "@angular/core": "2.2.0",
+        "@angular/forms": "2.2.0",
+        "@angular/http": "2.2.0",
+        "@angular/platform-browser": "2.2.0",
+        "@angular/platform-browser-dynamic": "2.2.0",
+        "@angular/router": "3.2.0",
         "systemjs": "0.19.40",
         "core-js": "^2.4.1",
         "reflect-metadata": "^0.1.8",
         "rxjs": "5.0.0-beta.12",
-        "zone.js": "^0.6.26"
+        "zone.js": "^0.6.26",
+        "@angular/upgrade": "2.2.0"
     },
     "devDependencies": {
         "concurrently": "^3.1.0",
         "lite-server": "^2.2.2",
-        "typescript": "2.0.3",
+        "typescript": "2.0.8",
         "@types/core-js": "^0.9.34",
         "@types/node": "^6.0.46"
     }
