--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "@angular/platform-browser": "2.2.0",
         "@angular/platform-browser-dynamic": "2.2.0",
         "@angular/router": "3.2.0",
+        "@angular/upgrade": "2.2.0",
         "systemjs": "0.19.40",
         "core-js": "^2.4.1",
         "reflect-metadata": "^0.1.8",
         "rxjs": "5.0.0-beta.12",
-        "zone.js": "^0.6.26",
-        "@angular/upgrade": "2.2.0"
+        "zone.js": "^0.6.26"
     },
     "devDependencies": {
         "concurrently": "^3.1.0",
