--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "zone.js": "0.7.4"
     },
     "devDependencies": {
-        "concurrently": "^3.4.0",
-        "lite-server": "^2.3.0",
+        "concurrently": "3.4.0",
+        "lite-server": "2.3.0",
         "typescript": "2.2.1",
         "@types/core-js": "0.9.35",
         "@types/node": "7.0.5"
