--- a/package.json
+++ b/package.json
@@ -13,24 +13,29 @@
     },
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "2.4.9",
-        "@angular/compiler": "2.4.9",
-        "@angular/core": "2.4.9",
-        "@angular/forms": "2.4.9",
-        "@angular/http": "2.4.9",
-        "@angular/platform-browser": "2.4.9",
-        "@angular/platform-browser-dynamic": "2.4.9",
-        "@angular/router": "3.4.9",
-        "@angular/upgrade": "2.4.9",
-        "systemjs": "0.20.9",
+        "@angular/common": "4.0.0",
+        "@angular/compiler": "4.0.0",
+        "@angular/core": "4.0.0",
+        "@angular/forms": "4.0.0",
+        "@angular/http": "4.0.0",
+        "@angular/platform-browser": "4.0.0",
+        "@angular/platform-browser-dynamic": "4.0.0",
+        "@angular/router": "4.0.0",
+        "@angular/upgrade": "4.0.0",
+        "@angular/compiler-cli": "4.0.0",
+        "@angular/platform-server": "4.0.0",
+        "@angular/tsc-wrapped": "4.0.0",
+        "@angular/animations": "4.0.0",
+
+        "systemjs": "0.19.47",
         "core-js": "2.4.1",
         "rxjs": "5.2.0",
-        "zone.js": "0.7.4"
+        "zone.js": "0.8.5"
     },
     "devDependencies": {
         "concurrently": "3.4.0",
         "lite-server": "2.3.0",
         "typescript": "2.2.1",
-        "@types/node": "7.0.5"
+        "@types/node": "7.0.11"
     }
 }
