--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "angular2-barebones",
+    "name": "angular-barebones",
     "author": "Dan Wahlin",
     "version": "1.0.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/danwahlin/angular2-barebones"
+        "url": "https://github.com/danwahlin/angular-barebones"
     },
     "scripts": {
         "tsc": "tsc",
@@ -13,28 +13,28 @@
     },
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "4.2.2",
-        "@angular/compiler": "4.2.2",
-        "@angular/core": "4.2.2",
-        "@angular/forms": "4.2.2",
-        "@angular/http": "4.2.2",
-        "@angular/platform-browser": "4.2.2",
-        "@angular/platform-browser-dynamic": "4.2.2",
-        "@angular/router": "4.2.2",
-        "@angular/upgrade": "4.2.2",
-        "@angular/compiler-cli": "4.2.2",
-        "@angular/platform-server": "4.2.2",
-        "@angular/tsc-wrapped": "4.2.2",
-        "@angular/animations": "4.2.2",
-        "systemjs": "0.20.14",
+        "@angular/common": "4.3.3",
+        "@angular/compiler": "4.3.3",
+        "@angular/core": "4.3.3",
+        "@angular/forms": "4.3.3",
+        "@angular/http": "4.3.3",
+        "@angular/platform-browser": "4.3.3",
+        "@angular/platform-browser-dynamic": "4.3.3",
+        "@angular/router": "4.3.3",
+        "@angular/upgrade": "4.3.3",
+        "@angular/compiler-cli": "4.3.3",
+        "@angular/platform-server": "4.3.3",
+        "@angular/tsc-wrapped": "4.3.3",
+        "@angular/animations": "4.3.3",
+        "systemjs": "0.20.17",
         "core-js": "2.4.1",
-        "rxjs": "5.4.0",
-        "zone.js": "0.8.12"
+        "rxjs": "5.4.2",
+        "zone.js": "0.8.16"
     },
     "devDependencies": {
-        "concurrently": "3.4.0",
+        "concurrently": "3.5.0",
         "lite-server": "2.3.0",
-        "typescript": "2.3.4",
-        "@types/node": "7.0.31"
+        "typescript": "2.4.2",
+        "@types/node": "8.0.19"
     }
 }
