--- a/package.json
+++ b/package.json
@@ -1,40 +1,34 @@
 {
-    "name": "angular-barebones",
-    "author": "Dan Wahlin",
-    "version": "1.0.0",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/danwahlin/angular-barebones"
-    },
-    "scripts": {
-        "tsc": "tsc",
-        "tsc:w": "tsc -w",
-        "start": "tsc && concurrently \"tsc -w\" \"lite-server\" "
-    },
-    "license": "ISC",
-    "dependencies": {
-        "@angular/common": "4.3.5",
-        "@angular/compiler": "4.3.5",
-        "@angular/core": "4.3.5",
-        "@angular/forms": "4.3.5",
-        "@angular/http": "4.3.5",
-        "@angular/platform-browser": "4.3.5",
-        "@angular/platform-browser-dynamic": "4.3.5",
-        "@angular/router": "4.3.5",
-        "@angular/upgrade": "4.3.5",
-        "@angular/compiler-cli": "4.3.5",
-        "@angular/platform-server": "4.3.5",
-        "@angular/tsc-wrapped": "4.3.5",
-        "@angular/animations": "4.3.5",
-        "systemjs": "0.20.18",
-        "core-js": "2.5.0",
-        "rxjs": "5.4.3",
-        "zone.js": "0.8.17"
-    },
-    "devDependencies": {
-        "concurrently": "3.5.0",
-        "lite-server": "2.3.0",
-        "typescript": "2.4.2",
-        "@types/node": "8.0.24"
-    }
+  "name": "angular-bare-bones",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
+  },
+  "devDependencies": {
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "typescript": "~2.4.2"
+  }
 }
