--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/language-service": "6.0.0",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
     "typescript": "2.7.2",
     "@angular-devkit/build-angular": "~0.6.0"
   }
